given this toml:
# ___                             _   ___            _ 
#/ __>._ _ _  ___  ___  ___  ___ | | / __> ___  ___ | |
#\__ \| ' ' |/ ._><_> |/ . |/ . \| | \__ \/ ._><_> || |
#<___/|_|_|_|\___.<___|\_. |\___/|_| <___/\___.<___||_|
#                      <___'                          

[package]
name = "smeagol_seal"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <boris.shmuylovich@gmail.com>"]
description = "A fast and secure credential manager"
license = "MIT"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.4"
rand = "0.8"
rand_word = "0.1.18" 
secrecy = { version = "0.10", features = ["serde"] }
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
rpassword = "7.3.1"
colored = "2.0"
thiserror = "1.0"
pyo3 = { version = "0.18", features = ["extension-module"] }